--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,86 @@
 /* Global */
 body {
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.7;
-  color: #ecf0f1;
+  margin: 0;
+  padding: 0;
+}
+
+/* Splash */
+.splash {
+  background-image: url(https://i.postimg.cc/wTp1YDDW/red-and-blue-hot-air-balloon-floating-on-air-on-body-of-36487.jpg);
+  background-position: center center;
+  background-size: cover;
+  height: 100vh;
+}
+
+.navbar {
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 100px;
+}
+
+.navbar-menu {
+  padding: 0;
+}
+
+.navbtn {
+  padding-left: 40px;
+}
+
+.btn-link {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+}
+
+.btn-nav {
+  padding: 3px;
+}
+
+.welcometxt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  width: 1000px;
+  height: auto;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.welcometxt h1, .welcometxt h2 {
+  color: #fff;
+}
+
+.welcometxt h1 {
+  font-size: 64px;
+  margin: 20px;
+}
+
+.welcometxt h2 {
+  font-size: 48px;
+  margin: 0;
+  font-family: "Roboto Slab", sans-serif;
+}
+
+.btn-tellmore {
+  font-size: 20px;
+  display: inline-block;
+  background-color: #f1c40f;
+  width: 300px;
+  height: 80px;
+  border-radius: 7px;
+  text-align: center;
+  padding: 22px;
+  margin-top: 30px;
 }
 /*# sourceMappingURL=style.css.map */
