--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /* Variables */
 
-$font-title: 'Roboto Slab', sans-serif;
-$font-text: 'Montserrat', sans-serif;
+$font-text: 'Roboto Slab', sans-serif;
+$font-title: 'Montserrat', sans-serif;
 
 $color-one: #f1c40f;
 $color-two: #7f8c8d;
@@ -10,7 +10,7 @@ $color-three: #ecf0f1;
 /* Global */
 
 body {
-  font-family: $font-text;
+  font-family: $font-title;
   font-size: 14px;
   line-height: 1.7;
   margin: 0;
@@ -31,14 +31,30 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 100px;
+  align-items: center;
+}
+
+.logo {
+  padding: 50px;
+  height: 100%;
+}
+
+.pagelogo {
+  color: #fff;
+  transform: scale(4);
+  color: $color-one;
+//  transform: translateX(-1px);
 }
 
 .navbar-menu {
   padding: 0;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbtn {
-  padding-left: 40px;
+  padding-left: 20px;
 }
 
 .btn-link {
@@ -51,7 +67,7 @@ body {
 }
 
 .btn-nav {
-  padding: 3px;
+  padding: 20px 13px;
 }
 
 .welcometxt {
@@ -77,7 +93,7 @@ body {
 .welcometxt h2 {
   font-size: 48px;
   margin: 0;
-  font-family: $font-title;
+  font-family: $font-text;
 }
 
 .btn-tellmore{
