--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   background-image: url(https://i.postimg.cc/wTp1YDDW/red-and-blue-hot-air-balloon-floating-on-air-on-body-of-36487.jpg);
   background-position: center center;
   background-size: cover;
+  background-attachment: fixed;
   height: 100vh;
 }
 
