add services styles

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,26 @@ body {
   padding: 0;
 }
 
+p {
+  color: #7f8c8d;
+  font-family: "Roboto Slab", sans-serif;
+}
+
+.section-title {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.section-title h3 {
+  font-size: 36px;
+  margin: 0;
+}
+
+.section-title p {
+  margin: 0;
+  font-style: italic;
+}
+
 /* Splash */
 .splash {
   background-image: url(https://i.postimg.cc/wTp1YDDW/red-and-blue-hot-air-balloon-floating-on-air-on-body-of-36487.jpg);
@@ -101,5 +121,33 @@ body {
   text-align: center;
   padding: 22px;
   margin-top: 30px;
+}
+
+/* Services */
+.row-services {
+  margin: 100px 0;
+}
+
+.service {
+  text-align: center;
+}
+
+.service i {
+  transform: scale(2.5);
+  color: #f1c40f;
+  border-radius: 50%;
+  border-color: #f1c40f;
+  border: 1px solid;
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+.service h4 {
+  font-size: 18px;
+  margin-bottom: 0;
+}
+
+.service p {
+  margin-top: 5px;
 }
 /*# sourceMappingURL=style.css.map */
