--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,8 +22,11 @@ p {
   font-family: $font-text;
 }
 
+section {
+  padding: 100px 0;
+}
+
 .section-title {
-  margin-top: 100px;
   text-align: center;
 }
 
@@ -94,7 +97,7 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -40%);
-  width: 1000px;
+  width: 100%;
   height: auto;
   flex-direction: column;
   align-items: center;
@@ -130,8 +133,7 @@ p {
 /* Services */
 
 .row-services {
-  margin: 100px 0;
-
+  margin-top: 100px;
 }
 
 .service {
