--- a/sass/style.scss
+++ b/sass/style.scss
@@ -116,6 +116,7 @@ section {
   font-size: 48px;
   margin: 0;
   font-family: $font-text;
+  font-style: italic;
 }
 
 .btn-tellmore{
@@ -159,4 +160,61 @@ section {
 
 .service p {
   margin-top: 5px;
+}
+
+/* Trips */
+
+.trips {
+  background-color: $color-three;
+}
+
+.title-trips {
+  margin-bottom: 100px;
+}
+
+.row-trips {
+  height: 500px;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.row-trips-1 {
+  margin: 50px 0;
+}
+
+.trip {
+  flex-direction: column;
+  padding: 0;
+  align-items: center;
+  background-color: #fff;
+  max-width: 350px;
+  max-height: 500px;
+}
+
+.img-trip {
+  width: 100%;
+  height: 77%;
+  padding: 0;
+}
+
+.img-trip img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.caption-trip {
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.caption-trip h4 {
+  margin: 0;
+  font-size: 20px;
+}
+
+.caption-trip p {
+  margin: 0;
+  font-style: italic;
 }
