--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,10 @@ section {
   max-height: 500px;
 }
 
+.link-trip {
+  text-decoration: none;
+}
+
 .img-trip {
   width: 100%;
   height: 77%;
@@ -210,6 +214,7 @@ section {
 .caption-trip h4 {
   margin: 0;
   font-size: 20px;
+  color: black;
 }
 
 .caption-trip p {
