--- a/sass/style.scss
+++ b/sass/style.scss
@@ -191,6 +191,10 @@ section {
   max-height: 500px;
 }
 
+.link-trip {
+  text-decoration: none;
+}
+
 .img-trip {
   width: 100%;
   height: 77%;
@@ -212,6 +216,7 @@ section {
 .caption-trip h4 {
   margin: 0;
   font-size: 20px;
+  color: black;
 }
 
 .caption-trip p {
