--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ section {
   -ms-flex-align: center;
       align-items: center;
   height: 100px;
-  align-items: center;
+  margin: 0;
 }
 
 .logo {
@@ -54,7 +54,7 @@ section {
   height: 100%;
 }
 
-.pagelogo {
+.logo i {
   color: #fff;
   transform: scale(4);
   color: #f1c40f;
@@ -69,8 +69,8 @@ section {
       align-items: center;
 }
 
-.navbtn {
-  padding-left: 20px;
+.btn-nav {
+  padding-left: 18px;
 }
 
 .btn-link {
@@ -80,13 +80,10 @@ section {
   color: #fff;
   width: 100%;
   height: 100%;
-}
-
-.btn-nav {
   padding: 20px 13px;
 }
 
-.welcometxt {
+.welcome-txt {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -97,18 +94,20 @@ section {
       flex-direction: column;
   -ms-flex-align: center;
       align-items: center;
+  margin: 0 auto;
 }
 
-.welcometxt h1, .welcometxt h2 {
+.welcome-txt h1, .welcome-txt h2 {
   color: #fff;
+  text-align: center;
 }
 
-.welcometxt h1 {
+.welcome-txt h1 {
   font-size: 64px;
   margin: 20px;
 }
 
-.welcometxt h2 {
+.welcome-txt h2 {
   font-size: 48px;
   margin: 0;
   font-family: "Roboto Slab", sans-serif;
@@ -185,7 +184,8 @@ section {
       align-items: center;
   background-color: #fff;
   max-width: 350px;
-  max-height: 500px;
+  height: 500px;
+  width: 350px;
 }
 
 .link-trip {
@@ -227,15 +227,15 @@ section {
   margin: 50px 0;
 }
 
-.socialmedia {
+.social-media {
   text-align: center;
 }
 
-.socialmedia a {
+.social-media a {
   font-size: 0;
 }
 
-.socialmedia i {
+.social-media i {
   background-color: black;
   color: #fff;
   border-radius: 50%;
@@ -246,4 +246,82 @@ section {
   padding-top: 8px;
   font-size: 14px;
 }
+
+/* Media */
+@media (max-width: 768px) {
+  /* Splash */
+  .navbar {
+    height: 40px;
+  }
+  .logo {
+    display: none;
+  }
+  .navbar-menu {
+    height: 30px;
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+    text-align: center;
+  }
+  .btn-nav {
+    padding-left: 1px;
+  }
+  .btn-link {
+    padding: 0 5px;
+  }
+  .welcome-txt h1 {
+    font-size: 24px;
+  }
+  .welcome-txt h2 {
+    font-size: 32px;
+  }
+  .btn-tellmore {
+    padding: 22px;
+  }
+  /* Services */
+  .service {
+    margin-bottom: 50px;
+  }
+  /* Trips */
+  .row-trips {
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    height: auto;
+  }
+  .trip {
+    margin-bottom: 100px;
+    max-width: 300px;
+  }
+  /* Footer */
+  .row-footer {
+    margin: 20px 0 10px 0;
+  }
+  .social-media {
+    -ms-flex-order: 1;
+        order: 1;
+  }
+  .copyright {
+    -ms-flex-order: 2;
+        order: 2;
+    bottom: 0;
+    text-align: center;
+    margin-top: 5px;
+  }
+}
+
+/*@media (max-width: 576px) {
+  .trip {
+    width: 300px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .trip {
+    max-width: 300px;
+    margin: 0 5px;
+  }
+}*/
 /*# sourceMappingURL=style.css.map */
