--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ section {
 /* Splash */
 .splash {
   background-image: url(https://i.postimg.cc/wTp1YDDW/red-and-blue-hot-air-balloon-floating-on-air-on-body-of-36487.jpg);
-  background-position: center center;
+  background-position: center;
   background-size: cover;
   background-attachment: fixed;
   height: 100vh;
@@ -311,17 +311,4 @@ section {
     margin-top: 5px;
   }
 }
-
-/*@media (max-width: 576px) {
-  .trip {
-    width: 300px;
-  }
-}
-
-@media (max-width: 1024px) {
-  .trip {
-    max-width: 300px;
-    margin: 0 5px;
-  }
-}*/
 /*# sourceMappingURL=style.css.map */
