--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,14 @@ section {
       justify-content: space-between;
   -ms-flex-align: center;
       align-items: center;
-  height: 100px;
+  height: 40px;
   margin: 0;
 }
 
 .logo {
   padding: 50px;
   height: 100%;
+  display: none;
 }
 
 .logo i {
@@ -62,15 +63,14 @@ section {
 
 .navbar-menu {
   padding: 0;
-  height: 100%;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
+  height: 30px;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
+  text-align: center;
 }
 
 .btn-nav {
-  padding-left: 18px;
+  padding-left: 1px;
 }
 
 .btn-link {
@@ -80,7 +80,8 @@ section {
   color: #fff;
   width: 100%;
   height: 100%;
-  padding: 20px 13px;
+  padding: 0 5px;
+  margin-bottom: 20px;
 }
 
 .welcome-txt {
@@ -103,27 +104,27 @@ section {
 }
 
 .welcome-txt h1 {
-  font-size: 64px;
+  font-size: 24px;
   margin: 20px;
 }
 
 .welcome-txt h2 {
-  font-size: 48px;
+  font-size: 32px;
   margin: 0;
   font-family: "Roboto Slab", sans-serif;
   font-style: italic;
 }
 
 .btn-tellmore {
-  font-size: 20px;
+  font-size: 17px;
   display: inline-block;
   background-color: #f1c40f;
-  width: 300px;
-  height: 80px;
+  width: 200px;
+  height: 50px;
   border-radius: 7px;
   text-align: center;
-  padding: 22px;
   margin-top: 30px;
+  line-height: 3;
 }
 
 /* Services */
@@ -133,6 +134,7 @@ section {
 
 .service {
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .service i {
@@ -166,14 +168,14 @@ section {
 }
 
 .row-trips {
-  height: 500px;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  height: auto;
   margin: 0;
-}
-
-.row-trips-1 {
-  margin: 50px 0;
 }
 
 .trip {
@@ -183,9 +185,10 @@ section {
   -ms-flex-align: center;
       align-items: center;
   background-color: #fff;
-  max-width: 350px;
   height: 500px;
   width: 350px;
+  margin-bottom: 100px;
+  max-width: 300px;
 }
 
 .link-trip {
@@ -224,11 +227,13 @@ section {
 
 /* Footer */
 .row-footer {
-  margin: 50px 0;
+  margin: 20px 0 10px 0;
 }
 
 .social-media {
   text-align: center;
+  -ms-flex-order: 1;
+      order: 1;
 }
 
 .social-media a {
@@ -247,68 +252,73 @@ section {
   font-size: 14px;
 }
 
+.copyright {
+  -ms-flex-order: 2;
+      order: 2;
+  bottom: 0;
+  text-align: center;
+  margin-top: 5px;
+}
+
 /* Media */
-@media (max-width: 768px) {
+@media (min-width: 992px) {
   /* Splash */
   .navbar {
-    height: 40px;
+    height: 100px;
   }
   .logo {
-    display: none;
+    display: block;
   }
   .navbar-menu {
-    height: 30px;
-    -ms-flex-pack: start;
-        justify-content: flex-start;
-    text-align: center;
-  }
-  .btn-nav {
-    padding-left: 1px;
-  }
-  .btn-link {
-    padding: 0 5px;
-  }
-  .welcome-txt h1 {
-    font-size: 24px;
-  }
-  .welcome-txt h2 {
-    font-size: 32px;
-  }
-  .btn-tellmore {
-    padding: 22px;
-  }
-  /* Services */
-  .service {
-    margin-bottom: 50px;
-  }
-  /* Trips */
-  .row-trips {
-    -ms-flex-direction: column;
-        flex-direction: column;
+    height: 100%;
     -ms-flex-pack: center;
         justify-content: center;
     -ms-flex-align: center;
         align-items: center;
-    height: auto;
+  }
+  .btn-nav {
+    padding-left: 18px;
+  }
+  .btn-link {
+    padding: 20px 13px;
+  }
+  .welcome-txt h1 {
+    font-size: 64px;
+  }
+  .welcome-txt h2 {
+    font-size: 48px;
+  }
+  .btn-tellmore {
+    font-size: 22px;
+    height: 80px;
+    width: 300px;
+    line-height: 2;
+  }
+  /* Services */
+  .service {
+    margin-bottom: 0px;
+  }
+  /* Trips */
+  .row-trips {
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-direction: row;
+        flex-direction: row;
   }
   .trip {
-    margin-bottom: 100px;
-    max-width: 300px;
+    max-width: 350px;
   }
   /* Footer */
   .row-footer {
-    margin: 20px 0 10px 0;
+    margin: 50px 0;
   }
   .social-media {
-    -ms-flex-order: 1;
-        order: 1;
+    -ms-flex-order: 2;
+        order: 2;
   }
   .copyright {
     -ms-flex-order: 2;
         order: 2;
-    bottom: 0;
-    text-align: center;
-    margin-top: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
