--- a/css/style.css
+++ b/css/style.css
@@ -185,10 +185,9 @@ section {
   -ms-flex-align: center;
       align-items: center;
   background-color: #fff;
-  height: 500px;
-  width: 350px;
+  height: 400px;
   margin-bottom: 100px;
-  max-width: 300px;
+  max-width: 250px;
 }
 
 .link-trip {
@@ -211,7 +210,7 @@ section {
 .caption-trip {
   width: 100%;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 17px;
 }
 
 .caption-trip h4 {
@@ -228,6 +227,8 @@ section {
 /* Footer */
 .row-footer {
   margin: 20px 0 10px 0;
+  -ms-flex-direction: column;
+      flex-direction: column;
 }
 
 .social-media {
@@ -261,6 +262,13 @@ section {
 }
 
 /* Media */
+@media (min-width: 576px) {
+  .trip {
+    height: 500px;
+    max-width: 350px;
+  }
+}
+
 @media (min-width: 992px) {
   /* Splash */
   .navbar {
@@ -306,19 +314,27 @@ section {
         flex-direction: row;
   }
   .trip {
-    max-width: 350px;
+    max-width: 300px;
   }
   /* Footer */
   .row-footer {
     margin: 50px 0;
+    -ms-flex-direction: row;
+        flex-direction: row;
   }
   .social-media {
     -ms-flex-order: 2;
         order: 2;
   }
   .copyright {
-    -ms-flex-order: 2;
-        order: 2;
+    -ms-flex-order: 1;
+        order: 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  .trip {
+    max-width: 350px;
   }
 }
 /*# sourceMappingURL=style.css.map */
